--- a/package.json
+++ b/package.json
@@ -11,15 +11,14 @@
   "scripts": {
     "build": "gulp build",
     "prepare": "npm run build",
-    "lint": "run-p lint:src lint:unit lint:integration",
+    "lint": "run-p lint:src lint:test",
     "test": "run-s lint test:unit",
     "integration": "run-s build test:integration",
     "test:unit": "mocha test/unit/*.spec.ts --require ts-node/register",
     "test:integration": "mocha test/integration/*.ts --slow 5000 --timeout 20000 --require ts-node/register",
     "test:coverage": "nyc npm run test:unit",
-    "lint:src": "tslint --format stylish -p tsconfig.json",
-    "lint:unit": "tslint -c tslint-test.json --format stylish test/unit/*.ts test/unit/**/*.ts",
-    "lint:integration": "tslint -c tslint-test.json --format stylish test/integration/*.ts",
+    "lint:src": "eslint src/ --ext .ts",
+    "lint:test": "eslint test/ --ext .ts",
     "apidocs": "node docgen/generate-docs.js --api node"
   },
   "nyc": {
@@ -82,12 +81,15 @@
     "@types/scrypt": "^6.0.0",
     "@types/sinon": "^4.1.3",
     "@types/sinon-chai": "^2.7.27",
+    "@typescript-eslint/eslint-plugin": "^2.20.0",
+    "@typescript-eslint/parser": "^2.20.0",
     "bcrypt": "^3.0.0",
     "chai": "^3.5.0",
     "chai-as-promised": "^6.0.0",
     "chalk": "^1.1.3",
     "child-process-promise": "^2.2.1",
     "del": "^2.2.1",
+    "eslint": "^6.8.0",
     "firebase-token-generator": "^2.0.0",
     "gulp": "^4.0.2",
     "gulp-header": "^1.8.8",
@@ -109,7 +111,6 @@
     "sinon": "^4.5.0",
     "sinon-chai": "^2.14.0",
     "ts-node": "^3.3.0",
-    "tslint": "^5.17.0",
     "typedoc": "^0.15.0",
     "typescript": "^3.7.3",
     "yargs": "^13.2.2"
