--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
     "@firebase/auth-types": "^0.9.3",
     "@types/bcrypt": "^2.0.0",
     "@types/chai": "^4.0.0",
-    "@types/chai-as-promised": "0.0.29",
+    "@types/chai-as-promised": "^7.1.0",
     "@types/firebase-token-generator": "^2.0.28",
     "@types/jsonwebtoken": "^7.2.8",
     "@types/lodash": "^4.14.104",
@@ -79,13 +79,13 @@
     "@types/nock": "^9.1.0",
     "@types/request": "^2.47.0",
     "@types/request-promise": "^4.1.41",
-    "@types/sinon": "^4.1.3",
-    "@types/sinon-chai": "^2.7.31",
+    "@types/sinon": "^9.0.0",
+    "@types/sinon-chai": "^3.0.0",
     "@typescript-eslint/eslint-plugin": "^2.20.0",
     "@typescript-eslint/parser": "^2.20.0",
     "bcrypt": "^3.0.6",
-    "chai": "^3.5.0",
-    "chai-as-promised": "^6.0.0",
+    "chai": "^4.2.0",
+    "chai-as-promised": "^7.0.0",
     "chalk": "^1.1.3",
     "child-process-promise": "^2.2.1",
     "del": "^2.2.1",
@@ -107,8 +107,8 @@
     "request": "^2.75.0",
     "request-promise": "^4.1.1",
     "run-sequence": "^1.1.5",
-    "sinon": "^4.5.0",
-    "sinon-chai": "^2.14.0",
+    "sinon": "^9.0.0",
+    "sinon-chai": "^3.0.0",
     "ts-node": "^3.3.0",
     "typedoc": "^0.15.0",
     "typescript": "^3.7.3",
