--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@firebase/database": "^0.6.0",
     "@types/node": "^10.10.0",
     "dicer": "^0.3.0",
+    "gulp-filter": "^6.0.0",
     "jsonwebtoken": "^8.5.1",
     "node-forge": "^0.9.1"
   },
