--- a/docgen/content-sources/node/toc.yaml
+++ b/docgen/content-sources/node/toc.yaml
@@ -155,8 +155,12 @@ toc:
     path: /docs/reference/admin/node/admin.machineLearning.MachineLearning
   - title: "Model"
     path: /docs/reference/admin/node/admin.machineLearning.Model
-  - title: "ModelOptions"
-    path: /docs/reference/admin/node/admin.machineLearning.ModelOptions
+  - title: "ModelOptionsBase"
+    path: /docs/reference/admin/node/admin.machineLearning.ModelOptionsBase
+  - title: "GcsTfliteModelOptions"
+    path: /docs/reference/admin/node/admin.machineLearning.GcsTfliteModelOptions
+  - title: "AutoMLTfliteModelOptions"
+    path: /docs/reference/admin/node/admin.machineLearning.AutoMLTfliteModelOptions
   - title: "TFLiteModel"
     path: /docs/reference/admin/node/admin.machineLearning.TFLiteModel
 
