[chore] Release 12.5.0 Take 2 (#2703)

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -111,6 +111,7 @@ jobs:
       uses: actions/download-artifact@v4.1.7
       with:
         name: dist
+        path: dist
 
     # Node.js and NPM are needed to complete the publish.
     - name: Set up Node.js
