feat: Add Data Connect API (#2701)
* feat(data-connect): Add Data Connect API

* Add unit tests

* Add DataConnect Service

* Add executeGraphqlRead()

* Handle query errors

* Add docstrings

* Increase unit tests coverage

* Increase test coverage for executeGraphql

* Add emulator unit tests

--- a/package.json
+++ b/package.json
@@ -80,6 +80,9 @@
       "database": [
         "lib/database"
       ],
+      "data-connect": [
+        "lib/data-connect"
+      ],
       "firestore": [
         "lib/firestore"
       ],
@@ -133,6 +136,11 @@
       "types": "./lib/database/index.d.ts",
       "require": "./lib/database/index.js",
       "import": "./lib/esm/database/index.js"
+    },
+    "./data-connect": {
+      "types": "./lib/data-connect/index.d.ts",
+      "require": "./lib/data-connect/index.js",
+      "import": "./lib/esm/data-connect/index.js"
     },
     "./eventarc": {
       "types": "./lib/eventarc/index.d.ts",
